# wukong

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS.md  CPPLINT.cfg  Dockerfile  INSTALL.md  LICENSE  LICENSE.txt  Makefile  README  README.md  ROADMAP.md  TODO  TUTORIALS.md  graph.h  test_graph.cpp  test_traverser_keeppath.cpp  traverser.h  traverser_keeppath.h
client/: CMakeLists.txt  README.md
client/include/: client_socket.h  command.h  console.h  cs_basic_type.h  proxy.h  server_socket.h
client/scripts/: build.sh  run.sh  server
client/src/: command.cpp  console.cpp
client/test/: example.cpp
client/tools/: build.sh  server
core/: SPARQLLexer.hpp  SPARQLParser.hpp  adaptor.hpp  assertion.hpp  bind.hpp  buddy_malloc.hpp  coder.hpp  config.hpp  conflict.hpp  console.hpp  cs_basic_type.hpp  data_statistic.hpp  dgraph.hpp  distributed_graph.hpp  engine.hpp  global.hpp  global_cfg.hpp  gpu.hpp  gpu_agent.hpp  gpu_cache.hpp  gpu_hash.cu  gpu_hash.hpp  gpu_mem.hpp  gpu_stream.hpp  graph_basic_types.hpp  graph_storage.hpp  gstore.hpp  logger.hpp  logger2.hpp  malloc_interface.hpp  mem.hpp  message_wrap.hpp  monitor.hpp  network_node.hpp  parser.hpp  planner.hpp  proxy.hpp  query.hpp  query_basic_types.hpp  rdf_meta.hpp  (+17 more)
core/comm/: adaptor.hpp  broadcast.hpp  rdma_adaptor.hpp  rdma_broadcast.hpp  tcp_adaptor.hpp  tcp_broadcast.hpp
core/engine/: engine.hpp  gpu_agent.hpp  gpu_engine.hpp  gpu_engine_impl.hpp  msgr.hpp  rdf.hpp  rmap.hpp  sparql.hpp
core/gpu/: gpu_agent.hpp  gpu_cache.hpp  gpu_engine.hpp  gpu_engine_cuda.hpp  gpu_engine_impl.hpp  gpu_hash.cu  gpu_hash.hpp  gpu_mem.hpp
core/gstore/: dynamic_gstore.hpp  gchecker.hpp  gstore.hpp  static_gstore.hpp
core/loader/: abstract_loader.hpp  base_loader.hpp  default_loader.hpp  dynamic_loader.hpp  hdfs_loader.hpp  loader_interface.hpp  posix_loader.hpp
core/mem_mgmt/: buddy_malloc.hpp  jemalloc.hpp  malloc_interface.hpp
core/mm/: buddy_malloc.hpp  jemalloc.hpp  malloc_interface.hpp
core/optimizer/: common.hpp  cost_model.hpp  helper.hpp  planner.hpp  stats.hpp
core/store/: bi_trie.hpp  cache.hpp  dynamic_gstore.hpp  gchecker.hpp  gstore.hpp  meta.hpp  static_gstore.hpp  vertex.hpp
datagen/: README.md  add_attribute.cpp  add_timestamp.cpp  convert.py  convert_nt.py  convert_rdf.py  encode.py  generate_data  generate_data.cpp  log.hpp  preprocess.cpp  preprocess.py  utils.hpp
datagen/generate_data/: CMakeLists.txt
datagen/generate_data/core/: generate_data.cpp
docs/: COMMANDS.md  Doxyfile  INSTALL.md  QA.md  TUTORIALS.md  conf.py  index.rst  wukong介绍.pptx
docs/gpu/: TUTORIALS.md  tutorials.md
docs/notes/: COMMANDS.md  INSTALL.md  QA.md  TUTORIALS.md  tRDF.md
docs/performance/: 1node-LUBM2560-jemalloc-20181108.md  1node-LUBM2560-jemalloc-20181111.md  1node-LUBM2560-jemalloc-20181112.md  1node-LUBM2560-jemalloc-20181129.md  1node-LUBM2560.md  1node-LUBM40-static-20181124.md  (+10 more)
generate/: generate_data.cpp
graph-store-distributed/: Makefile  batch_lubm.h  blocking_queue.h  client.h  global_cfg.cpp  global_cfg.h  graph.h  hello.cpp  index_server.h  ingress.h  klist_store.h  klist_store_backup.h  klist_store_nosplit.h  latency_logger.h  message_wrap.h  micro_bench.cpp  network_node.h  ontology.h  profile.h  rdma_lib.cc  rdma_resource.h  request.h  request_queue.h  simple_filter.h  test_graph_distributed.cpp  test_traverser_keeppath.cpp  test_trinity_simulate.cpp  thread_cfg.h  timer.h  traverser.h  trinity_client.h  trinity_request.h  trinity_server.h  trinity_simulate_test.cpp
graph-store-multicore/: Makefile  graph.h  test_traverser_keeppath.cpp  traverser_keeppath.h
graph-store-rdma/: Makefile  klist_store.h  ontology.h  request.h  request_queue.h
graph-store-single/: Makefile  test_traverser.cpp  test_traverser_keeppath.cpp  timer.h  traverser.h  traverser_keeppath.h
include/: batch_logger.h  builtin_console.h  client.h  client_mode.h  console.h  console.hpp  cs_basic_type.h  distributed_graph.h  distributed_graph.hpp  engine.h  engine.hpp  global_cfg.h  global_cfg.hpp  graph_basic_types.h  graph_basic_types.hpp  graph_storage.h  graph_storage.hpp  logger.hpp  message_wrap.h  monitor.h  monitor.hpp  network_node.h  old_graph_storage.h  parser.h  parser.hpp  proxy.h  proxy.hpp  query_basic_types.h  query_basic_types.hpp  rdma_resource.h  rdma_resource.hpp  rdma_resource_fake.h  rdma_resource_fake.hpp  reply_map.h  reply_map.hpp  server.h  server_socket.h  server_socket.hpp  simple_graph_storage.hpp  sparql_parser.h  (+4 more)
micro/: Makefile  hello.cpp  micro_bench.cpp  micro_verb.cpp
rdma_lib/: README.md  helper_func.hpp  pre_connector.hpp  rdma_header.hpp  rdmaio.hpp  simple_map.hpp  utils.hpp
scripts/: build.sh  config  config.template  core.bind.template  id_lubm_10240.statfile  id_lubm_2.statfile  id_lubm_2560.statfile  id_lubm_40.statfile  id_lubm_640.statfile  map  mpd.hosts  mpd.hosts.template  run.sh  syncdeps.sh
src/: builtin_console.cpp  client.cpp  client_mode.cpp  console.cpp  distributed_graph.cpp  engine.cpp  global_cfg.cpp  graph_storage.cpp  main.cpp  message_wrap.cpp  monitor.cpp  old_graph_storage.cpp  parser.cpp  proxy.cpp  rdma_resource.cpp  reply_map.cpp  server.cpp  simulate_trinity.cpp  sparql_parser.cpp  string_server.cpp  wait_queue.cpp  wukong.cpp
test/: main.cpp  main_zmq.cpp  test_rdma.cpp
tests/: test_bi_trie.cc  test_bitrie.cc  test_cache.cc  test_graph.cc  test_sample.cc
tests/gpu/: CMakeLists.txt  run.sh  sync.sh  test-adaptor.cpp  test-cache.cpp
tests/network/: CMakeLists.txt  README.md  mpd.hosts  network.cpp  run.sh
tools/: Makefile  build.sh  config  convert_format.cpp  count_spo.cpp  generate_ids.sh  generate_lubm.sh  generate_worker.sh  index_server.cpp  kill.sh  minimal_index_server.cpp  mpd.hosts  run.sh  run_dist.sh  run_micro.sh  run_single.sh  semantic_index_server.cpp  sync.sh  test.sh  trinity_run.sh
utils/: assertion.hpp  atomic.hpp  bitrie.hpp  errors.hpp  gpu.hpp  gpu_utils.hpp  hdfs.cpp  hdfs.hpp  logger2.hpp  math.hpp  misc.hpp  mymath.h  mymath.hpp  timer.h  timer.hpp  unit.hpp  utils.h  variant.hpp
(+688 files in other folders)
